tree-sitter-duck/test/corpus/else_if.txt
==================
Else-if chains
==================

if true { 1 } else if (let 'x' = letter) { 2 } else { 3 }
if let `Some value = option { 1 } else if let `None () = option { 2 } else { 3 }

---

(source_file
  (expression_statement
    (if_expression
      condition: (condition_expression
        (boolean))
      consequence: (block
        (expression_statement
          (postfix_expression
            (number))))
      alternative: (if_expression
        pattern: (character)
        value: (condition_expression
          (identifier))
        consequence: (block
          (expression_statement
            (postfix_expression
              (number))))
        alternative: (block
          (expression_statement
            (postfix_expression
              (number)))))))
  (expression_statement
    (if_expression
      pattern: (union_pattern
        case: (constructor_identifier)
        value: (identifier))
      value: (condition_expression
        (identifier))
      consequence: (block
        (expression_statement
          (postfix_expression
            (number))))
      alternative: (if_expression
        pattern: (union_pattern
          case: (constructor_identifier)
          value: (unit_pattern))
        value: (condition_expression
          (identifier))
        consequence: (block
          (expression_statement
            (postfix_expression
              (number))))
        alternative: (block
          (expression_statement
            (postfix_expression
              (number))))))))
